Fix footer link alignment

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -26,12 +26,14 @@ footer p {
 }
 
 .footer-links {
+  padding-left: 0;
 }
 
 .footer-links li {
     display: inline-block;
     margin-left: 0;
     margin-right: 15px;
+    color: #333;
 }
 
 .schedule-id {
@@ -57,7 +59,7 @@ footer p {
   border: 0;
   padding: 0;
   outline: 0;
-  margin: 0px;
+  margin: 0;
   display: inline-block;
   width: 100%;
 }
